routes/application/styles.sass
$font-family: franklin-gothic-urw, serif
$light: #fcfcfc
$dark: #1F2125
$border: #E0E0E0
$gray: #D9D9D9
$text-gray: #6F7880


$screen-phone-max: 768px
$screen-tablet-max: 992px
$screen-laptop-max: 1200px
$screen-desktop-max: 1440px

=phone
  @media only screen and (max-width: $screen-phone-max)
    @content

=tablet
  @media only screen and (max-width: $screen-tablet-max)
    @content

=laptop
  @media only screen and (max-width: $screen-laptop-max)
    @content

=desktop
  @media only screen and (max-width: $screen-desktop-max)
    @content

=constrain
  margin: 0 auto
  max-width: $screen-laptop-max
  +laptop
    max-width: $screen-tablet-max


.ridings
  display: flex
  flex-direction: column
  width: 100%
  min-height: 100vh

  .spinner
    flex: 1
    display: flex
    flex-direction: column
    justify-content: center
    align-items: center
    svg
      max-width: 250px
      color: $dark


  header
    display: flex
    justify-content: center
    align-items: center

    border-bottom: 1px solid $border
    background: white
    color: $dark
    height: 82px
    svg
      height: 25px

  main
    display: flex
    flex-direction: column
    flex: 1
    height: calc(100vh - 82px)
    background: $light

    .riding-selector
      height: 100px
      background: white
      display: flex
      flex-direction: column
      justify-content: center
      align-items: center
      border-bottom: 1px solid $border

      .Select-control
        border: 1px solid $border !important
        box-shadow: none !important
        background: white
        border-radius: 8px
        height: 45px
        max-width: 400px

      .Select-value
        font-size: 20px
        line-height: 45px
        font-family: $font-family
        font-style: normal
        font-weight: 500

    .reco
      flex: 1
      display: flex
      flex-direction: column
      justify-content: center
      align-items: center

      img.party
        max-width: 90vw
        height: auto

      .result-text
        font-family: $font-family
        text-align: center
        display: block
        font-size: 50px
        line-height: 1.4em
        font-weight: 700
        color: $dark

        small
          color: $text-gray
          font-size: 20px
          line-height: 1.4em
          font-weight: 500
          text-transform: uppercase
          display: block

        img
          display: block


    .chart
      +constrain
      height: 150px
      width: 100%
      margin-bottom: -5px // recharts, y?

  footer
    display: flex
    flex-direction: column
    justify-content: space-between
    // align-items: center

    font-family: $font-family

    background: $dark
    color: $light
    min-height: calc(100vh)
    svg
      height: 25px

    > *
      width: 100%

    .attribution
      +constrain
      border-top: 1px solid $gray
      height: 80px

      display: flex
      flex-direction: row
      justify-content: space-between
      align-items: center
      align-self: flex-end

      font-size: 20px
      a, a:hover, a:visited, span
        color: white
        text-decoration: none
        cursor: pointer

